# ingestion

./: README.md  pyproject.toml
tests/: test_ingestion.py
